@@ -1,3 +1,12 @@
+2009-03-14  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/userconfig.c
+	* src/util.h
+	* src/util.c
+	(xml_add_string, xml_add_bool, xml_get_string, xml_get_bool):
+	Moved from userconfig.c to util.c, as they're useful for other
+	modules too.
+
 2009-03-13  Alberto Garcia  <agarcia@igalia.com>
 
 	* TRANSLATORS
